--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@sveltejs/adapter-static": "^3.0.2",
 		"clsx": "^2.1.1",
 		"firebase": "^10.12.3",
+		"lucide-svelte": "^0.407.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
