--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-view-transition": "^0.5.3",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -38,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.2",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"firebase": "^10.12.3",
 		"lucide-svelte": "^0.407.0",
