--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^4.0.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -42,6 +43,7 @@
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"firebase": "^10.12.3",
+		"iconify": "^1.4.0",
 		"lucide-svelte": "^0.407.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
